--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nov19",
+  "name": "swaphub",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "author": "",
+  "author": "team52",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -18,6 +18,9 @@
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
-    "validator": "^10.9.0"
+    "validator": "^10.9.0",
+    "azure-storage": "^2.8.0",
+    "multer": "^1.4.1",
+    "into-stream": "^4.0.0"
   }
 }
