--- a/package.json
+++ b/package.json
@@ -10,17 +10,20 @@
   "author": "team52",
   "license": "ISC",
   "dependencies": {
+    "azure-storage": "^2.8.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
+    "date-and-time": "^0.6.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "into-stream": "^4.0.0",
     "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.12",
-    "validator": "^10.9.0",
-    "azure-storage": "^2.8.0",
     "multer": "^1.4.1",
-    "into-stream": "^4.0.0"
+    "mustache": "^3.0.1",
+    "mustache-express": "^1.2.8",
+    "validator": "^10.9.0"
   }
 }
